<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Activity.MainActivity">

    <ImageView
        android:id="@+id/chit_chat_icon"
        android:layout_width="91dp"
        android:layout_height="102dp"
        android:src="@drawable/chit_chat_icon"
        app:layout_constraintBottom_toTopOf="@id/welcome_title_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/welcome_title_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_chit_chat_app"
        android:textAlignment="center"
        android:textAppearance="@style/Widget.Material3.MaterialCalendar.Year"
        android:textColor="@color/purple_200"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/login_button_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chit_chat_icon"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/login_button_main"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="#904995"
        android:text="@string/login_button"
        app:layout_constraintBottom_toTopOf="@id/signUp_button_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_title_main"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/signUp_button_main"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#904995"
        android:text="@string/sign_up_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/settings" />



</androidx.constraintlayout.widget.ConstraintLayout>
